--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Sans+MS:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
 body {
-    font-family: 'Comic Sans MS', cursive;
+     font-family: 'Patrick Hand', cursive;
     margin: 0;
     padding: 0;
     display: flex;
