--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     width: 80%;
     max-width: 600px;
     min-height: 100vh;
-    background-color: #e6f7ff;
+   background-color: #d4e8d4; 
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
